--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' blob:">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Vite App</title>
-</head>
-<body>
-<div id="app"></div>
-<script src="./src/index.js" type="module"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' blob:"
+    />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <script src="js/pdf.min.js"></script>
+    <title>Remarkable2 Toolkit</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="./src/index.js" type="module"></script>
+  </body>
 </html>
