--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -8,6 +8,9 @@
     />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <script src="js/pdf.min.js"></script>
+    <script>
+      pdfjsLib.GlobalWorkerOptions.workerSrc = "js/pdf.worker.min.js";
+    </script>
     <title>Remarkable2 Toolkit</title>
   </head>
   <body>
