--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self' blob:"
+      content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"
     />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <script src="js/pdf.min.js"></script>
